style.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap");

:root {
  /* || Colors */
  --HEADING-COLOR: #00aaff;
  --MISC-FONT-COLOR: whitesmoke;
  --HEADER-COLOR: #1a1a2e;
  --CARD-COLOR: #1a1a1a;

  /* || Sizing */
  --ANCHOR-SIZE: 1.2rem;
}

html {
  scroll-behavior: smooth;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Orbitron", sans-serif;
  background-image: url(kepek/hatter.jpg);
  background-attachment: fixed;
  background-repeat: repeat-y;
  animation: scroll 10s ease-in-out infinite;
  background-size: scale(2);
  overflow-x: hidden;
  background-color: #1a1a1a;
}

.bg {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-color: rgba(0, 0, 0, 0.5);
}

header {
  position: sticky;
  background-color: var(--HEADER-COLOR);
}

h1,
h2 {
  text-transform: uppercase;
}

h2 {
  color: var(--HEADING-COLOR);
}

p {
  color: var(--MISC-FONT-COLOR);
  margin-bottom: 1rem;
}

header h1 {
  color: var(--MISC-FONT-COLOR);
  padding-top: 1rem;
}

header nav ul {
  list-style-type: none;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-evenly;
  padding: 2rem;
}

header nav a {
  font-size: var(--ANCHOR-SIZE);
  color: var(--HEADING-COLOR);
  text-decoration: none;
  padding: 0.5rem 1rem;
  font-weight: bold;
  border-radius: 0.5rem;
  transition: all 0.1s ease-in-out;
}

header nav :is(a:hover, a:focus) {
  background-color: var(--HEADING-COLOR);
  color: var(--HEADER-COLOR);
}

h1 {
  text-align: center;
  font-size: 3.5rem;
}

h2 {
  margin: 1rem 0;
}

article figure img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  border-radius: 1rem;
}

article figure {
  box-shadow: 0 0 10px 3px rgba(0, 170, 255, 0.3);
  border-radius: 1rem;
  text-align: center;
}

article {
  max-width: 65%;
  background-color: var(--CARD-COLOR);
  margin: 2rem auto;
  border-radius: 2rem;
  padding: 2rem;
}

.character-container {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  font-size: 0.6rem;
  word-wrap: break-word;
}

.character-container figure {
  max-width: 35%;
  display: relative;
  transition: all 0.25s ease-in-out;
}

.character-container figure::after {
  content: "";
}

.character-container :is(figure:hover, figure:focus) {
  transform: scale(1.1);
  overflow: hidden;
}

.character-container :is(figure:hover, figure:focus)::after {
  content: attr(title);
  position: absolute;
  display: block;
  bottom: 0%;
  text-align: left;
  width: 100%;
  color: var(--MISC-FONT-COLOR);
  font-size: 1rem;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 1rem 0.5rem;
}

footer {
  text-align: center;
  color: var(--MISC-FONT-COLOR);
  padding: 2rem;
  background-color: #1a1a2e;
}

@keyframes scroll {
  0% {
    background-position: 0%;
  }

  50% {
    background-position: 100%;
  }

  100% {
    background-position: 0%;
  }
}

@media screen and (max-width: 625px) {
  header nav {
    display: none;
  }

  .character-container {
    flex-flow: column nowrap;
    align-items: center;
    row-gap: 1rem;
  }

  .character-container figure {
    max-width: 70%;
  }
}

